tests/negative/MicroJuvix/WrongType.mjuvix
module WrongType;
  inductive A {
    a : A;
  };

  inductive B {
    b : B;
  };

  f : A;
  f ≔ b;
end;
